--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
+	--color-bg-1: hsl(209, 26%, 76%);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
@@ -22,12 +22,15 @@ body {
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 55, 1.75) 0%,
-			rgba(125, 215, 25, 0.2) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+	background: rgb(255, 254, 177);
+	background: linear-gradient(
+		99deg,
+		rgba(255, 254, 177, 1) 0%,
+		rgba(228, 220, 252, 1) 26%,
+		rgba(191, 211, 124, 1) 52%,
+		rgba(177, 176, 176, 1) 76%,
+		rgba(246, 189, 202, 1) 100%
+	);
 }
 
 h1,
