--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,10 @@
 @import '@fontsource/fira-mono';
-
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 26%, 76%);
+	--color-bg-1: rgba(210, 210, 210, 0.6);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
@@ -22,15 +21,6 @@ body {
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background: rgb(255, 254, 177);
-	background: linear-gradient(
-		99deg,
-		rgba(255, 254, 177, 1) 0%,
-		rgba(228, 220, 252, 1) 26%,
-		rgba(191, 211, 124, 1) 52%,
-		rgba(177, 176, 176, 1) 76%,
-		rgba(246, 189, 202, 1) 100%
-	);
 }
 
 h1,
